--- a/CSS/style.css
+++ b/CSS/style.css
@@ -340,3 +340,46 @@ body {
   left: 20px;
   top: -57px;
 }
+
+/*--------------------
+  Shopex offer style
+--------------------*/
+.shopex-offer {
+  padding: 1% 15%;
+}
+
+.shopex-container {
+  padding: 20px;
+  box-shadow: 0px 8px 40px rgba(50, 32, 138, 0.1);
+}
+
+.shopex-image img {
+  width: 50px;
+  height: 50px;
+}
+
+.shopex-offer h3 {
+  font-size: 32px;
+  color: #1A0B5B;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 25px;
+}
+
+.shopex-details h4 {
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #151875;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+.shopex-details p {
+  font-family: 'Lato';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  color: rgba(26, 11, 91, 0.3);
+}
