--- a/CSS/style.css
+++ b/CSS/style.css
@@ -177,6 +177,11 @@ body {
 
 .card {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  transition: 1s;
+}
+
+.card:hover {
+  transform: scale(1.07);
 }
 
 .card-image {
